--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <h1>วิชา SC310006 Mobile and Web Application Development</h1>
     <ul>
-      <li><a href="https://github.com/MiKiKung01/web2024/blob/01/index.html" target="_blank"></a>งานที่ 1</li>
+      <li><a href="https://github.com/MiKiKung01/web2024/blob/01/index.html" target="_blank">งานที่ 1</a></li>
       <li>งานที่ 2</li>
       <li>งานที่ 3</li>
     </ul>
