--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <h1>วิชา SC310006 Mobile and Web Application Development</h1>
     <ul>
-      <a href="w01.html"><li>งานที่ 1</li></a>
+      <li><a href="w01.html">งานที่ 1</a></li>
       <li>งานที่ 2</li>
       <li>งานที่ 3</li>
     </ul>
