--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
-<html>
-  <body>
-    <h1>วิชา SC310006 Mobile and Web Application Development</h1>
-    <ul>
-      <a href="w01.html"><li>งานที่ 1</li></a>
-      <li>งานที่ 2</li>
-      <li>งานที่ 3</li>
-    </ul>
-    โดย นายพงศ์พัฒน์ พิตรพิบูลผล
-  </body> 
+<!DOCTYPE html>
+<html lang="th">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SC310006 Mobile and Web Application Development</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(-45deg, #0039aa, #c1f7f4, #cdeeef, #00ffff);
+            background-size: 400% 400%;
+            animation: gradientBG 10s ease infinite;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        .content {
+            background: white;
+            padding: 20px;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border-top: 1px solid #ddd;
+            margin-top: auto;
+        }
+    </style>
+</head>
+
+<body>
+    <header class="bg-primary text-white text-center py-3">
+        <h1 class="m-0">SC310006 Mobile and Web Application Development</h1>
+    </header>
+  
+    <div class="container d-flex justify-content-center">
+        <div class="content">
+            <ul class="list-group">
+                <li class="list-group-item"><a href="w01.html" class="text-decoration-none">งานที่ 1</a></li>
+                <li class="list-group-item">งานที่ 2</li>
+                <li class="list-group-item">งานที่ 3</li>
+            </ul>
+        </div>
+    </div>
+
+    <footer>
+        โดย นายพงศ์พัฒน์ พิตรพิบูลผล
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
