--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="content">
             <ul class="list-group">
                 <li class="list-group-item"><a href="w01.html" class="text-decoration-none">งานที่ 1</a></li>
-                <li class="list-group-item">งานที่ 2</li>
+                <li class="list-group-item"><a href="w02.html" class="text-decoration-none">งานที่ 2</a></li>
                 <li class="list-group-item">งานที่ 3</li>
             </ul>
         </div>
