--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <ul class="list-group">
                 <li class="list-group-item"><a href="w01.html" class="text-decoration-none">งานที่ 1</a></li>
                 <li class="list-group-item"><a href="w02.html" class="text-decoration-none">งานที่ 2</a></li>
-                <li class="list-group-item">งานที่ 3</li>
+                <li class="list-group-item"><a href="w03.html" class="text-decoration-none">งานที่ 3</a></li>
+                <li class="list-group-item"><a href="" class="text-decoration-none">งานที่ 4</a></li>
+                <li class="list-group-item"><a href="" class="text-decoration-none">งานที่ 5</a></li>
             </ul>
         </div>
     </div>
