--- a/w04.html
+++ b/w04.html
@@ -10,7 +10,7 @@
 
 <body>
     <a-scene>
-        <a-sky src="./background.jpg"></a-sky>
+        <a-sky src="background.jpg"></a-sky>
 
         <!-- <a-entity gltf-model="https://cdn.aframe.io/examples/ar/models/HornedAnimal.glb" position="0 0 -3"
             scale="1 1 1"></a-entity> -->
@@ -45,8 +45,7 @@
             animation__rotation="property: rotation; to: 0 360 0; dur: 4000; loop: true; easing: linear;">
         </a-box>
 
-        <a-gltf-model src="./smol_ame_-_amelia_watson_holomyth/scene.gltf" position="-3 0.1 -2" rotation="0 45 0" scale="2 2 2"></a-gltf-model>
-        <a-gltf-model src="./bmw_m3_gtr_-_nfs_mw/scene.gltf" position="10 1 2" scale="1 1 1"></a-gltf-model>
+        <a-gltf-model src="scene.gltf" position="-3 0.1 -2" rotation="0 45 0" scale="2 2 2"></a-gltf-model>
 
         <a-light type="ambient" color="#ffffff"></a-light>
         <a-light type="directional" position="0 20 -5" intensity="0.5"></a-light>
