--- a/w4/w04.html
+++ b/w4/w04.html
@@ -10,7 +10,7 @@
 
 <body>
     <a-scene>
-        <a-sky src="./background.jpg"></a-sky>
+        <a-sky src="background.jpg"></a-sky>
 
         <a-plane position="0 0 0" rotation="-90 0 0" width="50" height="50" color="#7BC8A4">
         </a-plane>
@@ -39,8 +39,8 @@
             animation__rotation="property: rotation; to: 0 360 0; dur: 4000; loop: true; easing: linear;">
         </a-box>
 
-        <a-gltf-model src="./blackhole/scene.gltf" position="1 1 -250" animation="property: rotation; to: 0 360 0; dur: 3000; loop: true;" scale="80 80 80"></a-gltf-model>
-        <a-gltf-model src="./maxwell_the_cat_dingus/scene.gltf" position="-4 0 -2" scale="0.1 0.1 0.1" animation="property: rotation; to: 10 360 10; dur: 500; direction: alternate; loop: true; easing: easeInOutQuad;"></a-gltf-model>
+        <a-gltf-model src="blackhole/scene.gltf" position="1 1 -250" animation="property: rotation; to: 0 360 0; dur: 3000; loop: true;" scale="80 80 80"></a-gltf-model>
+        <a-gltf-model src="maxwell_the_cat_dingus/scene.gltf" position="-4 0 -2" scale="0.1 0.1 0.1" animation="property: rotation; to: 10 360 10; dur: 500; direction: alternate; loop: true; easing: easeInOutQuad;"></a-gltf-model>
 
         <a-light type="ambient" color="#ffffff"></a-light>
         <a-light type="directional" position="1 20 -50" intensity="0.5"></a-light>
