--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                 <li class="list-group-item"><a href="w3/w03.html" class="text-decoration-none">งานที่ 3</a></li>
                 <li class="list-group-item"><a href="w4/w04.html" class="text-decoration-none">งานที่ 4</a></li>
                 <li class="list-group-item"><a href="" class="text-decoration-none">งานที่ 5</a></li>
+
+                <li class="list-group-item"><a href="web2024-main/poket_center.html" class="text-decoration-none">โปรเจค</a></li>
             </ul>
         </div>
     </div>
