--- a/web2024-main/poket_center.html
+++ b/web2024-main/poket_center.html
@@ -12,7 +12,7 @@
         <a-assets>
             <a-asset-item id="dragapult" src="./model/pokemon_dragapult.glb"></a-asset-item>
             <a-asset-item id="pikachu" src="./model/pokemon_pikachu.glb"></a-asset-item>
-            <video id="sampleVideo" src="./video/healing_pokemon.mp4" preload="auto" muted="true"></video>
+            <video id="sampleVideo" src="./video/healing_pokemon.mp4"></video>
             <video src="./video/PC.mp4" id="sampleVideo2" preload="auto" muted="true"></video>
         </a-assets>
 
