--- a/w5/w05.html
+++ b/w5/w05.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<style>
+    body {
+        position: relative;
+        height: 100vh;
+        margin: 0;
+        text-align: center;
+        background-color: hsl(0, 0%, 82%);
+    }
+    h1, video {
+        top: 50%;
+        left: 50%;
+    }
+    video {
+        max-width: 100%;
+        max-height: 80%;
+        object-fit: contain;
+        border: 5px solid black;
+        border-radius: 5px;
+    }
+    div {
+        margin-bottom: 20px;
+        width: 60%;
+        height: 300px;
+        overflow: hidden;
+        border-radius: 4px;
+    }
+</style>
+<body>
+    <h1>Work 5</h1>
+    <div data-snack-id="@pongpat0_1/work05" data-snack-platform="web" data-snack-preview="true" data-snack-theme="dark" style="overflow:hidden;background:#0C0D0E;border:1px solid var(--color-border);border-radius:4px;height:505px;width:100%"></div>
 
+    <video src="./demo.mp4" controls></video>
+
+    <script async src="https://snack.expo.dev/embed.js"></script>
+</body>
+</html>
