--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li class="list-group-item"><a href="w3/w03.html" class="text-decoration-none">งานที่ 3</a></li>
                 <li class="list-group-item"><a href="w4/w04.html" class="text-decoration-none">งานที่ 4</a></li>
                 <li class="list-group-item"><a href="w5/w05.html" class="text-decoration-none">งานที่ 5</a></li>
+                <li class="list-group-item"><a href="w6/work6_vue.html" class="text-decoration-none">งานที่ 6</a></li>
 
                 <li class="list-group-item"><a href="web2024-main/poket_center.html" class="text-decoration-none">โปรเจค</a></li>
             </ul>
